test/sema/traits/trait_requirement_not_implemented.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B {}

trait A <: B {}

struct S {
    // CHECK: [[# @LINE + 1 ]]:10: error: implementing trait 'A' requires implementing trait 'B'
    impl A;
}

fn main() {}
